--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,10 @@
 body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+body {
     font-family: "Source Sans Pro", sans-serif;
 }
 
@@ -10,8 +16,26 @@ code {
     font-family: "Fira Code", monospace;
 }
 
+.container-scale {
+    max-width: max(60vw, 540px) !important;
+}
+
 main {
-    margin: 25px;
+    padding-top: 30px;
+    padding-bottom: 20px;
+    /* get footer to stay at bottom */
+    min-height: calc(100% - 76px - 48px);
+    flex: 1;
+}
+
+footer {
+    text-align: center;
+
+    position: relative;
+    bottom: 0;
+    clear: both;
+    padding-top: 12px;
+    padding-bottom: 12px;
 }
 
 p {
@@ -69,7 +93,8 @@ nav a {
 
 @media (max-width: 576px) {
     main {
-        padding: 0 10% !important;
+        padding-left: 10% !important;
+        padding-right: 10% !important;
     }
 }
 
@@ -77,7 +102,8 @@ nav a {
 
 #img-headshot {
     width: 150px;
-    margin: 10px 25px 3px;
+    /*margin: 10px 25px 4px;*/
+    margin-bottom: 4px;
     -webkit-border-radius: 40px;
     -moz-border-radius: 40px;
     border-radius: 40px;
@@ -89,12 +115,16 @@ nav a {
 }
 
 .intro-link {
-    height: 20px;
+    height: 24px;
 }
 
 #intro-email-link {
     cursor: pointer;
     margin-left: 5px;
+}
+
+#intro-left {
+    margin: 0 25px 25px;
 }
 
 #intro-right {
@@ -103,7 +133,12 @@ nav a {
 }
 
 #intro-div {
-    height: 30vh;
+    /* block & text center for smallest device width */
+    display: block;
+    text-align: center;
+
+    min-height: 30vh;
+    margin-top: 25px;
     margin-bottom: 50px;
 }
 
@@ -178,22 +213,33 @@ div.project-card {
     position: relative;
 }
 
-/* Project masonry media queries with bootstrap breakpoints */
+/* Bootstrap breakpoints for media queries */
 
 @media (min-width: 576px) {
     .project-card {
+        /* Masonry card width */
         max-width: 45%;
     }
 }
 
 @media (min-width: 768px) {
+    #intro-div {
+        display: flex;
+        text-align: left;
+    }
+}
+
+@media (min-width: 1200px) {
     .project-card {
+        /* Masonry card width */
         max-width: 30%;
     }
 }
 
-@media (min-width: 992px) {
+/* slightly larger than bootstrap xxl size (1400px) */
+@media (min-width: 1600px) {
     .project-card {
+        /* Masonry card width */
         max-width: 23%;
     }
 }
@@ -219,4 +265,11 @@ div.project-card {
     vertical-align: -0.35em;
     margin-left: -0.36em;
     margin-right: -0.15em;
+}
+
+/* Bootstrap Accordion focus highlight  */
+.accordion-button:focus {
+    outline-style: none;
+    box-shadow: none;
+    border-color: transparent;
 }
